[gd_scene load_steps=3 format=2]

[ext_resource path="res://spells/water/water_level1.gd" type="Script" id=1]
[ext_resource path="res://spells/water/water_level1_proj.tscn" type="PackedScene" id=2]

[node name="Node2D" type="Node2D" index="0"]

light_mask = 0
script = ExtResource( 1 )
max_charge = null
cooldown = null
has_activation = false

[node name="Projectile1" parent="." index="0" instance=ExtResource( 2 )]

[node name="Projectile2" parent="." index="1" instance=ExtResource( 2 )]

_sections_unfolded = [ "Transform" ]

[node name="Projectile3" parent="." index="2" instance=ExtResource( 2 )]

_sections_unfolded = [ "Transform" ]

[node name="Projectile4" parent="." index="3" instance=ExtResource( 2 )]

_sections_unfolded = [ "Transform" ]

[node name="Projectile5" parent="." index="4" instance=ExtResource( 2 )]

_sections_unfolded = [ "Transform", "Z Index" ]

[node name="LifeTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="FreeTimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 2.4
one_shot = false
autostart = true

[node name="SFX" type="AudioStreamPlayer2D" parent="." index="7"]

stream = null
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]

[connection signal="timeout" from="FreeTimer" to="." method="_on_FreeTimer_timeout"]


